--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,60 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-image: url(assets/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.stopwatch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 0 50px hsla(202, 100%, 50%, 0.466);
+    border-radius: 50px;
+    backdrop-filter: blur(10px);
+    padding: 30px 50px;
 }
-a:hover {
-  color: #535bf2;
+.display{
+    font-size: 5rem;
+    font-family: monospace;
+    font-weight: bold;
+    color: hsl(0, 0%, 100%);
+    text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+    margin-bottom: 25px;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.controls button{
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    min-width: 125px;
+    border: 2px solid;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: transparent;
+    transition: box-shadow 0.3s ease;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.start-button{
+    color: hsl(115, 100%, 40%);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.start-button:hover{
+    box-shadow: 0 2px 10px hsl(115, 100%, 35%);
 }
-button:hover {
-  border-color: #646cff;
+.stop-button{
+    color: hsl(10, 90%, 50%);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.stop-button:hover{
+    box-shadow: 0 2px 10px hsl(10, 90%, 50%);
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.reset-button{
+    color: hsl(205, 90%, 60%);
+}
+.reset-button:hover{
+    box-shadow: 0 2px 10px hsl(205, 90%, 60%);
 }
